# intoSQLModel

./: README.md  database.db  main.py  pyproject.toml
